--- a/gradle.properties
+++ b/gradle.properties
@@ -14,12 +14,11 @@ pluginUntilBuild = 211.*
 # See https://jb.gg/intellij-platform-builds-list for available build versions.
 pluginVerifierIdeVersions = 2020.2.4, 2020.3.4, 2021.1
 
-platformType = IC
+platformType = IU
 platformVersion = 2020.2.4
 platformDownloadSources = true
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-# TODO: fix plugin not find
 platformPlugins = com.intellij.database
 
 # Opt-out flag for bundling Kotlin standard library.
